--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 	<h1> Domácí úkol </h1>
 
+	<!-- <button id="btn-order">Objednat</button> -->
+	<!-- <button id="btn-order" disabled>Kontrola dostupnosti...</button> -->
 
 	<script src="main.js"></script>
 </body>
